Mon Jan  6 17:31:03 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Reactive_Connect_Strategy.cpp:
	* tao/LF_Connect_Strategy.cpp: Used the cached pointer to access
	  the ORB_Core, instead of accessing the ORB_Core in the
	  transport. The reason why this should be done this way is too
	  involved to explain here, but suffice to say that in highly
	  multi-threaded environments the transports could dis-sappear
	  before the connection handlers. Accessing the ORB_Core from the
	  transport could then lead to vague crashes.

Mon Jan  6 17:12:40 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>


	* performance-tests/Memory/IORsize/client.cpp:
	* performance-tests/Memory/IORsize/server.cpp:
	* performance-tests/Memory/IORsize/Memory_Growth.h:
	* performance-tests/Memory/IORsize/Memory_Growth.cpp:
	* performance-tests/Memory/IORsize/Foo_i.h:
	* performance-tests/Memory/IORsize/Foo_i.cpp:
	* performance-tests/Memory/IORsize/Makefile:
	* performance-tests/Memory/IORsize/Test.idl: A simple, again a
	  very simple test, to measure the memory consumed by the server
	  for unmarshalling an IOR. This test will not be compiled in all
	  the builds, but only in the builds where the scripts are run. 

	* performance-tests/Memory/Makefile: Added the new test to the
	  list of directories.
	
Sat Jan 04 12:15:39 2003  Pradeep Gore  <pradeep@oomworks.com>

	* orbsvcs/Notify_Service/Notify_Server.cpp:
	  Removed extra ACE_CHECK_RETURN causing build errors.
	
Fri Jan  3 14:43:56 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/util/utl_global.cpp:
	* TAO_IDL/include/idl_global.h:

	  Changes to the management of the IDL compiler's stack of prefixes,
	  to address a problem that appeared when there is a chain of 
	  included IDL files. Thanks to Adee Ran <adeeran@yahoo.com> for
	  reporting the problem and supplying example IDL files to 
	  reproduce it.

Fri Jan 03 14:22:14 2003  Pradeep Gore  <pradeep@oomworks.com>
