@@ -27,4 +27,9 @@ private:
   CORBA::ORB_var orb_;
 };
 
+#if defined(_MSC_VER) && (_MSC_VER >= 1200)
+# pragma warning(pop)
+#endif /* _MSC_VER */
+
+#include "ace/post.h"
 #endif /*FOO_I_H*/
