@@ -1,3 +1,7 @@
+Tue Jan  7 09:02:52 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
+
+	* performance-tests/Memory/IORsize/Foo_i.h: Fixed fuzz errors.
+
 Mon Jan  6 17:31:03 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* tao/Reactive_Connect_Strategy.cpp:
